--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,15 +1,15 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 
 
 <table class="table table-sm">
     <tr>
-    <th>ID</th>
-    <th>UserName</th>
-    <th>Password</th>
+    <th>Id</th>
+    <th>User Name</th>
+   
     <th>First Name</th>
     <th>Last Name</th>
     <th>Phone Number</th>
-    <th>email</th>
+    <th>Email</th>
     <th>Admin</th>
     <th>Reviewer</th>
 
@@ -18,12 +18,12 @@
     <tr *ngFor="let user of users" >
       <td>{{ user.id}}</td>
       <td>{{ user.userName}}</td>
-      <td>{{ user.password}}</td>
-      <td>{{ user.firstName}}</td>
+   
+      <td>{{ user.firstName}} {{ user.lastName}}   </td>
       <td>{{ user.lastName}}</td>
       <td>{{ user.phoneNumber}}</td>
       <td>{{ user.email}}</td>
-      <td>{{ user.isAdmin}}</td>
-      <td>{{ user.isReviewer}}</td>
+      <td>{{ user.isAdmin ? "Yes" : "No"}}</td>
+      <td>{{ user.isReviewer ? "Yes" : "No"}}</td>
 
       </tr>
